--- a/Helm/charts/my-app/templates/secrets.yaml
+++ b/Helm/charts/my-app/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
-type: Opaque
+  name: {{ .Values.secrets.name }}
+type: {{ .Values.secrets.type }}
 stringData:
-  app-secret: IDontKnowWhatIAmDoing
+  appSecret: {{ .Values.secrets.stringData.appSecret }}
