--- a/Helm/charts/my-app/templates/pvc.yaml
+++ b/Helm/charts/my-app/templates/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redisdb-pvc
+  name: {{ .Values.PersistentVolumeClaim.name }}
 spec:
-  storageClassName: ""
+  storageClassName: {{ .Values.PersistentVolumeClaim.storageClassName }}
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.PersistentVolumeClaim.storage }}
