--- a/Helm/charts/my-app/templates/services.yaml
+++ b/Helm/charts/my-app/templates/services.yaml
@@ -1,44 +1,26 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-service
-  labels:
-    run: my-redis
-spec:
-  type: NodePort
-  selector:
-    run: my-redis
-  ports:
-  - port: 6379
-    targetPort: 6379
-    nodePort: 30010
-    protocol: TCP
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
   name: app-service
   labels:
-    run: my-app
+    run: {{ .Values.deployment.name }}
 spec:
-  type: NodePort
+  type: {{ .Values.service.type }}
   selector:
-    run: my-app
+    run: {{ .Values.deployment.name }}
   ports:
-  - port: 8000
-    name: app-port
-    targetPort: 8000
-    nodePort: 30008
-    protocol: TCP
-  - port: 6379
-    name: redis-port
-    targetPort: 6379
-    nodePort: 30010
-    protocol: TCP
-  - port: 5672
-    name: rabbit-port
-    targetPort: 5672
-    nodePort: 30012
-    protocol: TCP
+  - port: {{ .Values.service.portInfo.my_app.port }}
+    name: {{ .Values.service.portInfo.my_app.name }}
+    targetPort: {{ .Values.service.portInfo.my_app.targetPort }}
+    nodePort: {{ .Values.service.portInfo.my_app.nodePort }}
+    protocol: {{ .Values.service.portInfo.my_app.protocol }}
+  - port: {{ .Values.service.portInfo.my_redis.port }}
+    name: {{ .Values.service.portInfo.my_redis.name }}
+    targetPort: {{ .Values.service.portInfo.my_redis.targetPort }}
+    nodePort: {{ .Values.service.portInfo.my_redis.nodePort }}
+    protocol: {{ .Values.service.portInfo.my_redis.protocol }}
+  - port: {{ .Values.service.portInfo.my_rabbit.port }}
+    name: {{ .Values.service.portInfo.my_rabbit.name }}
+    targetPort: {{ .Values.service.portInfo.my_rabbit.targetPort }}
+    nodePort: {{ .Values.service.portInfo.my_rabbit.nodePort }}
+    protocol: {{ .Values.service.portInfo.my_rabbit.protocol }}
